style: fix contrast and position on navbar

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -18,9 +18,9 @@
   font-weight: bold;
 }
 
-.navbar-nav {
+/* .navbar-nav {
   justify-content: flex-end;
-}
+} */
 
 .nav-item {
   margin-left: 10px;
